feat: #53 생성 MCP 응답 검증과 projection 호출 경계 연결